<resources>
    <string name="app_name">DevZen Chat bot AI </string>
    <string name="admob_ap_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_rewarded_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="email_adress" translatable="false">contact@dezven.com</string>
    <string name="playStoreLink" translatable="false">https://play.google.com/store/apps/developer?id=DevZen+Studio&amp;hl=vi&amp;gl=US</string>
    <string name="chatBotName">Chat bot :</string>

    <string name="howmany_credit_each_ad">5</string>
    <string name="howmany_credit_for_first_download">3</string>
    <string name="howmany_credits_every_day">3</string>



    <string name="character_desc">100</string>
    <string name="conversation_max_tokens">3000</string>
    <string name="failed_load_response"> I apologize, but I am encountering an error. I am unable to load a response. Please check your internet connection and try again.</string>
    <string name="share_app_text">Hi! I\'m using </string>
    <string name="share_app_text2">\nYou can ask anything you want from AI using this fantastic app. Let\'s download this app now! 👉 Check it out: http://play.google.com/store/apps/details?id=DevZen+Studio&amp;hl=vi&amp;gl=US</string>
    <string name="share_firends">Share with your Friends</string>
    <string name="write_here">Write your message here</string>
    <string name="email">E-Mail...</string>
    <string name="loadingg">Loading...</string>
    <string name="Typing">Typing...</string>
    <string name="settings">Settings</string>
    <string name="enable_dark_mode">Dark Theme</string>
    <string name="enbl_light_mode">Light Theme</string>
    <string name="version">By Khai Nghiem</string>
    <string name="how_to_use">How to use</string>
    <string name="send_to">Send to</string>

</resources>